@@ -198,6 +198,7 @@ Arnaud Delobelle
 Erik Demaine
 John Dennis
 Roger Dev
+Philippe Devalkeneer
 Raghuram Devarakonda
 Catherine Devlin
 Scott Dial
